# bayesian-search

./: README.md  main.py  pyproject.toml
bayesian_search/: bo_acquisition.py  bo_encoding.py  bo_gp.py  bo_search.py  bo_types.py  bo_viz.py
tests/: test_bo_acquisition.py  test_bo_acquisition_edges.py  test_bo_encoding.py  test_bo_encoding_edges.py  test_bo_gp.py  test_bo_gp_edges.py  test_bo_search.py  test_bo_search_edges.py  test_bo_types.py  test_bo_viz.py  test_main.py
