[project]
name = "bayesian-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "scikit-learn>=1.7.1",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "poethepoet>=0.37.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]

[tool.poe.tasks]
test = { shell = "PYTHONPATH=. uv run pytest" }
format = { shell = '''
uv run ruff format || exit 1
uv run ruff check --fix || exit 1
''' }
types = { shell = "uv run mypy" }

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
python_version = "3.13"
files = [
    "main.py",
    "bayesian_search/**/*.py",
]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
